--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -23,3 +23,17 @@
 .link {
   color: #09d3ac;
 }
+
+.nav {
+  padding: 12px 0;
+}
+
+.nav__list {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.nav__list-item {
+  display: inline-block;
+  margin: 0 12px;
+}
